[package]
name = "maps"
version = "0.1.0"
authors = ["Manuel Reinhardt <manuel.rhdt@gmail.com>"]
edition = "2018"

[dependencies]
serde = "^1"
serde_derive = "^1"
geo = "^0.10"
geojson = "^0.13"
nom = "^4.1"
rayon = "^1"
num = "^0.2"
reqwest = "^0.9"
indicatif = "^0.10"
zip = "^0.5"

[dependencies.config]
version = "0.9"
features = ["toml"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
